Project

General

Profile

Actions

Bug #10096

closed

kstat update routines shouldn't check for NULL kstat

Added by John Levon almost 5 years ago. Updated over 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
-
Start date:
2018-12-19
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:

Description

It can't be NULL, and we dereference it before anyway.

Actions #1

Updated by Electric Monk over 4 years ago

  • Status changed from New to Closed
  • % Done changed from 0 to 100

git commit 10ef8623c60fb2d3d54ff885eafaeaec567a9357

commit  10ef8623c60fb2d3d54ff885eafaeaec567a9357
Author: John Levon <john.levon@joyent.com>
Date:   2019-01-23T19:05:58.000Z

    10096 kstat update routines shouldn't check for NULL kstat
    Reviewed by: Robert Mustacchi <rm@joyent.com>
    Approved by: Richard Lowe <richlowe@richlowe.net>

Actions

Also available in: Atom PDF