10096 kstat update routines shouldn't check for NULL kstat Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>